--- a/css/style.css
+++ b/css/style.css
@@ -3,11 +3,16 @@ body {
 }
 
 header {
+  margin: 0;
+  padding: 0;
+}
+
+h1 {
   background-color: #47b300;
   text-align: center;
-  margin: 50px;
+  padding: 20px;
   font-family: 'Amatic SC', cursive;
-  font-size: 32pt;
+  font-size: 48pt;
 }
 
 h2,
@@ -23,4 +28,31 @@ p {
   background-color: #47b300;
   text-align: center;
   font-size: 16pt;
+}
+
+a {
+  text-decoration: none;
+}
+
+nav {
+  margin-bottom: 10px;
+  border: 1px solid black;
+}
+
+nav ul {
+  margin: 0;
+  padding: 0;
+}
+
+nav ul li {
+  display: inline-block;
+  background-color: #47b300;
+  width: 33%;
+  text-align: center;
+}
+
+nav ul li a {
+  color: #000;
+  height: 50px;
+  display: block;
 }
