--- a/css/style.css
+++ b/css/style.css
@@ -2,11 +2,6 @@ body {
   background-color: #2f5218;
 }
 
-header {
-  margin: 0;
-  padding: 0;
-}
-
 h1 {
   background-color: #47b300;
   text-align: center;
@@ -34,25 +29,27 @@ a {
   text-decoration: none;
 }
 
-nav {
-  margin-bottom: 10px;
-  border: 1px solid black;
-}
-
 nav ul {
-  margin: 0;
   padding: 0;
+  list-style-type: none;
 }
 
 nav ul li {
   display: inline-block;
-  background-color: #47b300;
   width: 33%;
   text-align: center;
 }
 
 nav ul li a {
   color: #000;
-  height: 50px;
+  font-family: 'Amatic SC', cursive;
+  font-size: 32pt;
   display: block;
+  padding: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+nav ul li a:hover {
+  background-color: #47b300;
 }
