--- a/css/style.css
+++ b/css/style.css
@@ -29,12 +29,18 @@ a {
   text-decoration: none;
 }
 
+nav {
+  margin-left: 100px;
+  margin-right: 100px;
+}
+
 nav ul {
   padding: 0;
   list-style-type: none;
 }
 
 nav ul li {
+  margin: 0;
   display: inline-block;
   width: 33%;
   text-align: center;
@@ -43,7 +49,7 @@ nav ul li {
 nav ul li a {
   color: #000;
   font-family: 'Amatic SC', cursive;
-  font-size: 32pt;
+  font-size: 26pt;
   display: block;
   padding: 10px;
   padding-left: 20px;
