--- a/css/style.css
+++ b/css/style.css
@@ -33,19 +33,16 @@ nav {
   margin-left: 100px;
   margin-right: 100px;
 }
-
 nav ul {
   padding: 0;
   list-style-type: none;
 }
-
 nav ul li {
   margin: 0;
   display: inline-block;
   width: 33%;
   text-align: center;
 }
-
 nav ul li a {
   color: #000;
   font-family: 'Amatic SC', cursive;
@@ -55,7 +52,28 @@ nav ul li a {
   padding-left: 20px;
   padding-right: 20px;
 }
-
 nav ul li a:hover {
   background-color: #47b300;
+}
+
+#compress {
+  margin: 0 auto;
+  width: 700px;
+}
+
+#list-style {
+  width: 500px;
+  margin: 15px auto;
+  background-color: #47b300;
+}
+#list-style li {
+  font-family: 'Open Sans Condensed', sans-serif;
+  font-size: 16pt;
+  text-align: center;
+}
+
+#dog {
+  display: block;
+  width: 300px;
+  margin: 10px auto;
 }
