Small change to the syntax of style.css

--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,8 @@ nav ul li a {
   font-family: 'Amatic SC', cursive;
   font-size: 26pt;
   display: block;
-  padding: 10px;
+  padding-top: 10px;
+  padding-bottom: 10px;
   padding-left: 20px;
   padding-right: 20px;
 }
