--- a/css/style.css
+++ b/css/style.css
@@ -1,29 +1,30 @@
 h1,
 h3 {
-   font-family: 'Oswald' , sans-serif;
-   background-color: #2E73B3;
-   margin: 0px;
-   color: #F5FAFC;
+   font-family: Oswald, sans-serif;
+   background-color: #2e73b3;
+   margin: 0;
+   color: #f5fafc;
    text-align: center;
    padding: 10px;
 }
 
 h2 {
-   background-color: #FAB5F7;
-   margin: 0px;
+   background-color: #fab5f7;
+   margin: 0;
    padding: 10px;
 }
 
 p {
-   font-family: 'Barlow Condensed' , sans-serif;
-   background-color: #2E73B3;
-   color: #F5FAFC;
+   font-family: 'Barlow Condensed', sans-serif;
+   background-color: #2e73b3;
+   color: #f5fafc;
    margin: 1px;
    padding: 10px;
 }
- img {
-    width: 100vw;
-    height: 100vh;
+
+img {
+   width: 100vw;
+   height: 100vh;
 }
 
 nav ul {
@@ -33,7 +34,7 @@ nav ul {
 nav ul li {
    width: 33%;
    display: inline-block;
-   background-color: #FAB5F7;
+   background-color: #fab5f7;
 }
 
 nav ul li a {
@@ -50,15 +51,14 @@ a:hover {
    background-color: lightgrey;
 }
 
- nav ol li a {
+nav ol li a {
    padding: 30px 0;
    display: block;
    color: white;
-
 }
 
 nav ol li {
    width: 33%;
    display: inline-block;
-   background-color: #4360B0;
+   background-color: #4360b0;
 }
